lab-3/tokyo/11_route_table_tokyo.tf
# create route table for Tokyo VPC
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id

  tags = { Name = "shinjuku-private-rt01" }
}

# create route table association for Tokyo private subnets
resource "aws_route_table_association" "private_a" {
  subnet_id      = aws_subnet.private_a.id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "private_b" {
  subnet_id      = aws_subnet.private_b.id
  route_table_id = aws_route_table.private.id
}

# create route table association for Tokyo public subnets
resource "aws_route_table_association" "public_a" {
  subnet_id      = aws_subnet.public_a.id
  route_table_id = aws_route_table.public.id
}
# create route table association for Tokyo public subnets
resource "aws_route_table_association" "public_b" {
  subnet_id      = aws_subnet.public_b.id
  route_table_id = aws_route_table.public.id
}
